--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -1314,7 +1314,7 @@ html {
   select {
     margin-right: 2%;
     height: 32px;
-    width: 173px;
+    width: 150px;
     color: white;
     border: 1px solid white;
     -webkit-border-radius: 4px;
@@ -1371,6 +1371,10 @@ html {
 
 #noticias-panel {
   margin: 35px;
+  @media (max-width: 500px){
+    margin: 20px;
+
+  }
 
 }
 
@@ -1380,24 +1384,37 @@ html {
   }
   #noticias-panel-fotos-main {
     overflow: hidden;
-    min-height: 400px;
-    min-width: 300px;
+    margin-top:10px;
+    min-height: 200px;
+    min-width: 350px;
     img {
       margin-left: 15px;
       border-radius: 5px;
       border: 3px solid white;
-      max-height: 90%;
-      max-width: 300px;
+      max-height: 600px;
+      max-width: 360px;
       min-width: 300px;
+    @media (max-width: 500px){
+      width: 92%;
+      margin-left: 0px;
+
+    }
+
     }
   }
   #noticias-panel-fotos-thumbs {
+    margin-top: 5px;
     img {
       margin-left: 15px;
-      margin-top: 5px;
       max-width: 15%;
+      height: 30px;
       border: 1px solid white;
       border-radius: 2px;
+      @media(max-width: 500px){
+        margin-left: 0px;
+        margin-top: 5px;
+
+      }
     }
   }
 }
@@ -1450,9 +1467,11 @@ html {
     -webkit-border-radius: 15px;
     -moz-border-radius: 15px;
     border-radius: 15px;
-
     padding: 5px;
+    @media(max-width: 500px){
+      width: 95%;
 
+    }
   }
 
   div {
@@ -1496,7 +1515,7 @@ html {
     color: white;
     text-align: left;
     font-size: 38px;
-    line-height: 25px;
+    line-height: 32px;
   }
 
   .noticias-comentario {
