--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -67,23 +67,65 @@ html {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
 
+.nav-button-transformed{
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
+
 .nav-button {
   flex: 1;
 
   margin-top: 15px;
   margin-left: 15px;
+
+  -webkit-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  -ms-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  transition: all 0.4s;
+
+  transform-origin: 13px 13px;
+  transform-style: preserve-3D;
+
   div {
     cursor: pointer;
-    width: 30px;
+    width: 25px;
     height: 4px;
     border-radius: 2px;
     background-color: #ffffff;
-    margin: 2px;
+    margin: 4px;
     -webkit-transition: all 0.4s;
     -moz-transition: all 0.4s;
     -ms-transition: all 0.4s;
     -o-transition: all 0.4s;
     transition: all 0.4s;
+  }
+  
+
+
+  .nav-button-top-transformed {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+  .nav-button-mid-transformed {
+    -webkit-transform: translate(-3px, 0px);
+    -moz-transform: translate(-3px, 0px);
+    -ms-transform: translate(-3px, 0px);
+    -o-transform: translate(-3px, 0px);
+    transform: translate(-3px, 0px);
+  }
+  .nav-button-bot-transformed {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
   }
 }
 
@@ -108,6 +150,87 @@ html {
     flex: 5;
 
     //background-color: green;
+  }
+}
+
+.menu-mobile-panel {
+  width: 50%;
+  color: white;
+  background-color: #406276;
+  position: fixed;
+  bottom: 0px;
+  top: 50px;
+  z-index: 500;
+  height: 100%;
+
+  .menu-desktop-btn {
+    margin-top: 15px;
+  }
+
+  -webkit-transform: translate(-1000px, 0);
+  -moz-transform: translate(-1000px, 0);
+  -ms-transform: translate(-1000px, 0);
+  -o-transform: translate(-1000px, 0);
+  transform: translate(-1000px, 0);
+
+  @media (min-width: 600px) {
+    visibility: collapse;
+    display: none;
+  }
+}
+
+.menu-mobile-panel-show {
+  -webkit-transform: translate(0px, 0);
+  -moz-transform: translate(0px, 0);
+  -ms-transform: translate(0px, 0);
+  -o-transform: translate(0px, 0);
+  transform: translate(0px, 0);
+}
+
+.menu-mobile-panel-show-add {
+  -webkit-animation: menu-mobile-enter 0.4s;
+  -o-animation: menu-mobile-enter 0.4s;
+  animation: menu-mobile-enter 0.4s;
+}
+
+.menu-mobile-panel-show-remove {
+
+  -webkit-animation: menu-mobile-leave 0.4s;
+  -o-animation: menu-mobile-leave 0.4s;
+  animation: menu-mobile-leave 0.4s;
+}
+
+@keyframes menu-mobile-enter {
+  0% {
+    -webkit-transform: translate(-1000px, 0);
+    -moz-transform: translate(-1000px, 0);
+    -ms-transform: translate(-1000px, 0);
+    -o-transform: translate(-1000px, 0);
+    transform: translate(-1000px, 0);
+  }
+  100% {
+    -webkit-transform: translate(0px, 0);
+    -moz-transform: translate(0px, 0);
+    -ms-transform: translate(0px, 0);
+    -o-transform: translate(0px, 0);
+    transform: translate(0px, 0);
+  }
+}
+
+@keyframes menu-mobile-leave {
+  0% {
+    -webkit-transform: translate(0px, 0);
+    -moz-transform: translate(0px, 0);
+    -ms-transform: translate(0px, 0);
+    -o-transform: translate(0px, 0);
+    transform: translate(0px, 0);
+  }
+  100% {
+    -webkit-transform: translate(-1000px, 0);
+    -moz-transform: translate(-1000px, 0);
+    -ms-transform: translate(-1000px, 0);
+    -o-transform: translate(-1000px, 0);
+    transform: translate(-1000px, 0);
   }
 }
 
@@ -974,7 +1097,6 @@ html {
       font-size: 17px;
       margin-bottom: 15px;
 
-
     }
 
     td {
@@ -1018,7 +1140,7 @@ html {
   }
 }
 
-.issuu{
+.issuu {
   background-color: transparent;
   margin-bottom: 10px;
   margin-top: 10px;
@@ -1371,7 +1493,7 @@ html {
 
 #noticias-panel {
   margin: 35px;
-  @media (max-width: 500px){
+  @media (max-width: 500px) {
     margin: 20px;
 
   }
@@ -1384,7 +1506,7 @@ html {
   }
   #noticias-panel-fotos-main {
     overflow: hidden;
-    margin-top:10px;
+    margin-top: 10px;
     min-height: 200px;
     min-width: 350px;
     img {
@@ -1394,11 +1516,11 @@ html {
       max-height: 600px;
       max-width: 360px;
       min-width: 300px;
-    @media (max-width: 500px){
-      width: 92%;
-      margin-left: 0px;
+      @media (max-width: 500px) {
+        width: 92%;
+        margin-left: 0px;
 
-    }
+      }
 
     }
   }
@@ -1410,7 +1532,7 @@ html {
       height: 30px;
       border: 1px solid white;
       border-radius: 2px;
-      @media(max-width: 500px){
+      @media(max-width: 500px) {
         margin-left: 0px;
         margin-top: 5px;
 
@@ -1468,7 +1590,7 @@ html {
     -moz-border-radius: 15px;
     border-radius: 15px;
     padding: 5px;
-    @media(max-width: 500px){
+    @media(max-width: 500px) {
       width: 95%;
 
     }
@@ -1660,7 +1782,6 @@ html {
   }
 }
 
-
 #contacto h1 {
   font-family: 'Lato Heavy', serif;
   text-align: center;
@@ -1819,7 +1940,7 @@ html {
   -moz-border-radius: 5px;
   border-radius: 5px;
   font-size: 16px;
-  box-shadow: 0px 0px 10px -3px black ;
+  box-shadow: 0px 0px 10px -3px black;
 
   -webkit-animation: show-error 0.4s;
   -o-animation: show-error 0.4s;
@@ -1828,10 +1949,10 @@ html {
 }
 
 @keyframes show-error {
-  0%{
+  0% {
     opacity: 0;
   }
-  100%{
+  100% {
     opacity: 1;
   }
 }
