--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -972,6 +972,7 @@ html {
   flex-direction: column;
   align-items: center;
 
+
   #empresas-title {
     color: white;
     background-color: black;
@@ -982,27 +983,88 @@ html {
     background-color: white;
     width: 100%;
     max-width: 100%;
-    overflow: auto;
+    overflow: hidden;
 
     @media (min-width: 800px) {
-      width: 900px;
+      width: 1000px;
       max-width: 1000px;
     }
 
     #empresas-list {
       display: flex;
       flex-direction: row;
-      -ms-flex-wrap: wrap;
-      -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: nowrap;
+      -webkit-flex-wrap: nowrap;
       width: 1600px;
       max-width: 1600px;
+      position: relative;
       .empresa {
-        height: 60px;
-        width: 150px;
+        position: absolute;
+        width: auto;
         background-color: lightgray;
         margin: 10px;
+        img{
+          min-height: 140px;
+
+        }
       }
     }
+  }
+}
+
+
+.empresa{
+  //-webkit-animation-delay: time;
+  //-moz-animation-delay: time;
+  //-o-animation-delay: time;
+  //animation-delay: time;
+
+  -webkit-animation: move-slide-empresa 20s infinite;
+  -o-animation: move-slide-empresa 20s infinite;
+  animation: move-slide-empresa 20s infinite;
+}
+
+// Slider Empresas
+
+@keyframes move-slide-empresa {
+  0%{
+    //opacity: 0;
+    -webkit-transform: translate(350px,0);
+    -moz-transform: translate(350px,0);
+    -ms-transform: translate(350px,0);
+    -o-transform: translate(350px,0);
+    transform: translate(350px,0);
+  }
+  25%{
+    -webkit-transform: translate(700px,0);
+    -moz-transform: translate(700px,0);
+    -ms-transform: translate(700px,0);
+    -o-transform: translate(700px,0);
+    transform: translate(700px,0);
+  }
+
+  50%{
+    -webkit-transform: translate(1050px,0);
+    -moz-transform: translate(1050px,0);
+    -ms-transform: translate(1050px,0);
+    -o-transform: translate(1050px,0);
+    transform: translate(1050px,0);
+  }
+  75%{
+    opacity: 0;
+    -webkit-transform: translate(-350px,0);
+    -moz-transform: translate(-350px,0);
+    -ms-transform: translate(-350px,0);
+    -o-transform: translate(-350px,0);
+    transform: translate(-350px,0);
+  }
+  100%{
+    opacity: 1;
+    -webkit-transform: translate(0px,0);
+    -moz-transform: translate(0px,0);
+    -ms-transform: translate(0px,0);
+    -o-transform: translate(0px,0);
+    transform: translate(0px,0);
   }
 }
 
@@ -2018,3 +2080,5 @@ html {
   font-weight: normal;
   src: local('Lato Black'), url('Lato-Black.ttf') format('woff');
 }
+
+
