--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -255,6 +255,7 @@ html {
   width: 1020px;
   #menu-desktop-logo {
     flex: 2;
+    background-color: #133548;
     min-width: 100px;
     max-width: 100px;
     margin-right: 10px;
