--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -973,7 +973,6 @@ html {
   flex-direction: column;
   align-items: center;
 
-
   #empresas-title {
     color: white;
     background-color: black;
@@ -993,19 +992,22 @@ html {
 
     #empresas-list {
       display: flex;
-      flex-direction: row;
-      -ms-flex-wrap: nowrap;
-      -webkit-flex-wrap: nowrap;
-      width: 1600px;
-      max-width: 1600px;
-      position: relative;
+      flex-direction: column;
+      -ms-flex-wrap: wrap;
+      -webkit-flex-wrap: wrap;
+      width: 6000px;
+      max-width: 6000px;
+      max-height: 100%;
       .empresa {
-        position: absolute;
-        width: auto;
-        background-color: lightgray;
+        width: 180px;
+        max-width: 180px;
+        max-height: 70px;
         margin: 10px;
-        img{
-          min-height: 140px;
+        background-color: lightgray;
+        img {
+          //min-height: 140px;
+          max-width: 150px;
+          max-height: 50px;
 
         }
       }
@@ -1013,59 +1015,88 @@ html {
   }
 }
 
+.empresa.ng-enter,
+.empresa.ng-leave {
+  -webkit-transition: .4s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+  -moz-transition: .4s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+  -ms-transition: .4s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+  -o-transition: .4s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+  transition: .4s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+  position: relative;
+}
 
-.empresa{
+.empresa.ng-enter {
+  left: 0px;
+  width: 180px !important;
+}
+
+.empresa.ng-leave.ng-leave-active {
+  left: -300px;
+  width: 0px !important;
+}
+
+.empresa.ng-leave {
+  left: 0px;
+  width: 180px !important;
+}
+
+.empresa.ng-enter.ng-enter-active {
+  left: -300px;
+  width: 0px !important;
+}
+
+.empresa {
   //-webkit-animation-delay: time;
   //-moz-animation-delay: time;
   //-o-animation-delay: time;
   //animation-delay: time;
 
-  -webkit-animation: move-slide-empresa 20s infinite;
-  -o-animation: move-slide-empresa 20s infinite;
-  animation: move-slide-empresa 20s infinite;
+  //-webkit-animation: move-slide-empresa 20s infinite;
+  //-o-animation: move-slide-empresa 20s infinite;
+  //animation: move-slide-empresa 20s infinite;
 }
 
 // Slider Empresas
 
 @keyframes move-slide-empresa {
-  0%{
+  0% {
     //opacity: 0;
-    -webkit-transform: translate(350px,0);
-    -moz-transform: translate(350px,0);
-    -ms-transform: translate(350px,0);
-    -o-transform: translate(350px,0);
-    transform: translate(350px,0);
+    -webkit-transform: translate(350px, 0);
+    -moz-transform: translate(350px, 0);
+    -ms-transform: translate(350px, 0);
+    -o-transform: translate(350px, 0);
+    transform: translate(350px, 0);
   }
-  25%{
-    -webkit-transform: translate(700px,0);
-    -moz-transform: translate(700px,0);
-    -ms-transform: translate(700px,0);
-    -o-transform: translate(700px,0);
-    transform: translate(700px,0);
+  25% {
+    -webkit-transform: translate(700px, 0);
+    -moz-transform: translate(700px, 0);
+    -ms-transform: translate(700px, 0);
+    -o-transform: translate(700px, 0);
+    transform: translate(700px, 0);
   }
 
-  50%{
-    -webkit-transform: translate(1050px,0);
-    -moz-transform: translate(1050px,0);
-    -ms-transform: translate(1050px,0);
-    -o-transform: translate(1050px,0);
-    transform: translate(1050px,0);
+  50% {
+    -webkit-transform: translate(1050px, 0);
+    -moz-transform: translate(1050px, 0);
+    -ms-transform: translate(1050px, 0);
+    -o-transform: translate(1050px, 0);
+    transform: translate(1050px, 0);
   }
-  75%{
+  75% {
     opacity: 0;
-    -webkit-transform: translate(-350px,0);
-    -moz-transform: translate(-350px,0);
-    -ms-transform: translate(-350px,0);
-    -o-transform: translate(-350px,0);
-    transform: translate(-350px,0);
+    -webkit-transform: translate(-350px, 0);
+    -moz-transform: translate(-350px, 0);
+    -ms-transform: translate(-350px, 0);
+    -o-transform: translate(-350px, 0);
+    transform: translate(-350px, 0);
   }
-  100%{
+  100% {
     opacity: 1;
-    -webkit-transform: translate(0px,0);
-    -moz-transform: translate(0px,0);
-    -ms-transform: translate(0px,0);
-    -o-transform: translate(0px,0);
-    transform: translate(0px,0);
+    -webkit-transform: translate(0px, 0);
+    -moz-transform: translate(0px, 0);
+    -ms-transform: translate(0px, 0);
+    -o-transform: translate(0px, 0);
+    transform: translate(0px, 0);
   }
 }
 
