--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -67,6 +67,8 @@ html {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
 
+select option { color: black; }
+
 .nav-button-transformed {
   -webkit-transform: rotate(180deg);
   -moz-transform: rotate(180deg);
