--- a/app/stylesheets/screen.css
+++ b/app/stylesheets/screen.css
@@ -1766,7 +1766,7 @@ select option {
   margin-bottom: 10px;
   text-align: justify;
   max-height: 400px;
-  overflow: hidden;
+  overflow: auto;
   font-size: 12px;
   line-height: 15px;
   color: #FFFFFF;
