--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -1687,7 +1687,7 @@ select option { color: black; }
     margin-bottom: 10px;
     text-align: justify;
     max-height: 400px;
-    overflow: hidden;
+    overflow: auto;
     font-size: 12px;
     line-height: 15px;
     color: #FFFFFF;
