--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -144,17 +144,26 @@ select option { color: black; }
     height: 40px;
     margin-top: 5px;
     width: 2px;
+    margin-left: 40px;
     background-color: white;
   }
 
   .logo {
     flex: 5;
-    margin-left: 5px;
     padding: 5px;
-    text-align: right;
-
+    margin-right: 15px;
+text-align: right;
     //background-color: green;
   }
+}
+
+.bienvenidos{
+  color: white;
+  margin-left: 30px;
+  margin-top: 15px;
+  font-family: 'Lato Heavy', serif;
+  font-size: 25px;
+  text-align: left;
 }
 
 .menu-mobile-panel {
@@ -935,10 +944,16 @@ select option { color: black; }
       }
     }
 
-    img {
+    .agenda_imagen_contenedor{
+      margin-right: 10px;
+      margin-left: 10px;
       width: 300px;
-      height: 300px;
-      max-height: 300px;
+      min-height: 150px;
+      }
+
+    img {
+      min-height: 100%;
+      width: 100%;
       background-color: #ffffff;
       @media (min-width: 800px) {
         margin-left: 10px;
@@ -973,7 +988,7 @@ select option { color: black; }
         margin-bottom: 10px;
       }
       p {
-        max-height: 170px;
+        max-height: 190px;
         overflow: auto;
       }
 
