--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -1212,6 +1212,66 @@ text-align: right;
 
 }
 
+.contacto-mensaje-enviado{
+  //margin-top: 20px;
+  min-height: 90px;
+  max-height: 90px;
+}
+
+.contacto-original{
+  //margin-top: 70px;
+  min-height: 90px;
+  max-height: 90px;
+}
+
+.contacto-titulo-container{
+  margin-top: 90px;
+}
+
+
+#contacto-titulo{
+  overflow: hidden;
+  min-height: 90px;
+  max-height: 90px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+.contacto-enviado{
+  animation: change-enviado 3s linear 0s normal none infinite;
+  -webkit-animation: change-enviado 3s linear 0s normal none infinite;
+  -moz-animation: change-enviado 3s linear 0s normal none infinite;
+  -o-animation: change-enviado 3s linear 0s normal none infinite;
+}
+
+@-webkit-keyframes change-enviado {
+  0%   {margin-top:90px;}
+  15%  {margin-top:90px;}
+  25%  {margin-top:-90px;}
+  40%  {margin-top:-90px;}
+  50%  {margin-top:-90px;}
+  65%  {margin-top:-90px;}
+  75%  {margin-top:-90px;}
+  85%  {margin-top:-90px;}
+  100% {margin-top:90px;}
+}
+@keyframes change-enviado {
+  0%   {margin-top:90px;}
+  15%  {margin-top:90px;}
+  25%  {margin-top:-90px;}
+  40%  {margin-top:-90px;}
+  50%  {margin-top:-90px;}
+  65%  {margin-top:-90px;}
+  75%  {margin-top:-90px;}
+  85%  {margin-top:-90px;}
+  100% {margin-top:90px;}
+}
+
+
+
+
 #administracion {
   table {
     font-family: "Montserrat Semibold", sans-serif;
