--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -1804,7 +1804,7 @@ text-align: right;
     }
   }
 
-  div {
+  #noticias-button-container {
     width: 90%;
     position: relative;
     margin-top: -45px;
