--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -1030,6 +1030,7 @@ text-align: right;
       flex-direction: column;
       -ms-flex-wrap: wrap;
       -webkit-flex-wrap: wrap;
+      flex-wrap: wrap;
       width: 6000px;
       max-width: 6000px;
       max-height: 100%;
