--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -2192,7 +2192,6 @@ text-align: right;
 
 .error-input {
   border-color: red !important;
-  width: 315px;
 }
 
 
@@ -2202,7 +2201,7 @@ text-align: right;
   background: red;
   margin-top: 5px;
   color: white;
-  width: 300px;
+  //width: 300px;
   white-space: nowrap;
   padding: 5px;
   -webkit-border-radius: 5px;
